--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             </tr>
         </table>
   </div> 
+  <script
+  src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
