--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
       <meta charset="utf-8">
       <title>Video Camera</title>
-  </head> 
+  </head>
 <body>
 
   <div class="col s6 m6 l6">
@@ -23,9 +23,8 @@
               <td> <span id="remoteStatus"></span> </td> 
             </tr>
         </table>
-  </div> 
-  <script
-  src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+  </div>
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
